modules/gdscript/tests/scripts/parser/errors/double_dot.gd
func test():
	if [0]..size():
		pass
